--- a/templates/admin_custom/atributo_editar.html
+++ b/templates/admin_custom/atributo_editar.html
@@ -1,7 +1,8 @@
-{% extends 'admin_custom/base.html' %} {% block title %}Editar Atributo{%
-endblock %} {% block page_title %}Editar Atributo Dinámico{% endblock %} {%
-block page_subtitle %}Modifica los datos del atributo{% endblock %} {% block
-content %}
+{% extends 'admin_custom/base.html' %} 
+{% block title %}Editar Atributo{%endblock %} 
+{% block page_title %}Editar Atributo Dinámico{% endblock %} 
+{%block page_subtitle %}Modifica los datos del atributo{% endblock %} 
+{% block content %}
 <div class="max-w-3xl mx-auto">
   <!-- Breadcrumb -->
   <nav class="flex items-center gap-2 text-sm mb-6" aria-label="Breadcrumb">
