--- a/templates/base.html
+++ b/templates/base.html
@@ -416,21 +416,21 @@
           <ul class="space-y-3">
             <li>
               <a
-                href="#"
+                href="{% url 'home' %}"
                 class="text-white/80 hover:text-white transition-opacity text-sm"
                 >Inicio</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="{% url 'productos:lista' %}"
                 class="text-white/80 hover:text-white transition-opacity text-sm"
-                >Proyectos</a
+                >Catálogo</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="{% url 'contacto' %}"
                 class="text-white/80 hover:text-white transition-opacity text-sm"
                 >Contacto</a
               >
