--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
           </div>
           <div class="flex flex-col sm:flex-row gap-4 sm:gap-5 justify-center lg:justify-start pt-4 sm:pt-6 px-4 sm:px-0">
           <a href="{% url 'productos:lista' %}" class="group relative inline-flex items-center justify-center px-8 sm:px-10 py-3 sm:py-4 bg-red-accent text-white text-xs sm:text-sm uppercase tracking-wider font-bold overflow-hidden transition-all duration-300 hover:bg-opacity-90 hover:translate-y-[-2px] hover:shadow-xl hover:shadow-red-accent/20">
-            <span class="relative z-10">Catátlogo de Productos</span>
+            <span class="relative z-10">Catálogo de Productos</span>
           </a>
           
         </div>
@@ -126,7 +126,7 @@
   <h2
     class="text-3xl font-heading font-bold text-blue-dark mb-10 text-center"
   >
-    Productos Destacadas
+    Productos Destacados
   </h2>
 
   <div class="grid md:grid-cols-3 gap-8 items-start">
